# hackathon_practice

./: Makefile  README.md  app.py  pyproject.toml  server.py
basics/: camera_basic.py  gpt_basic.py  prompts.py
testapp/: __init__.py  camera_get.py  routes.py  views.py
testapp/gpt/: gpt_response.py  propmts.py
testapp/static/css/: styles.css
testapp/static/js/: scripts.js
testapp/templates/: index.html  layout.html
testapp/templates/testapp/: index.html
