[tool.poetry]
name = "hackathon-practice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
opencv-contrib-python = "^4.10.0.84"
openai = "^1.42.0"
boto3 = "^1.35.9"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
